# omnicar

./: CMakeLists.txt  README.md  package.xml
config/: ekf_localization.yaml  orb_slam2.yaml
config/move_base/: costmap_common_params.yaml
launch/: main.launch
scripts/: camera_processing.py  send_goal.py
